--- a/lab2/index.html
+++ b/lab2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - Hello World</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   	<meta charset="UTF-8" />
@@ -18,31 +18,43 @@
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<!-- Link to javascript file - DEFER waits until all elements are rendered -->
 	<script type="text/javascript" src="./js/lab.js" DEFER></script>
+	<style>
+		.centered-text{text-align: center;}
+		#content {
+        background-color: rgb(247, 135, 90);
+    }
+	</style>
 </head>
 <body>
 	<!-- Style this page by changing the CSS in ../css/site.css or css/lab.css -->
 	<main id="content">
 		<section>
-			<h1>Lab X - Subject/Topic</h1>
+			
+			<h1> <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"></h1> 
+			<h2 class="centered-text">LAB 2 - HELLO WORLD</h2>
+				
 			<div class="minor-section">
-					<h2>Challenge</h2>
-					<p>Restate the challenge of the lab here.</p>
+					<h3>Challenge</h3>
+					<p>To create a site that says hello to the world.</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Problems</h2>
-					<p>What problems arose? How did you solve them? </p>
+					<h4>Problems</h4>
+					<p>None</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Reflection</h2>
-					<p>Put your reflections about this assignment here. How did it go? What kind of energy did you put into the assignment? </p>
+					<h5>Reflection</h5>
+					<p>This assignment was fun, I was able to pick up HTML an CSS easily. I look forward to incorporating JS and creating more complex websites. Hello world</p>
 			</div>
 
 			<div class="minor-section">
-					<h2>Results</h2>
+					<h6>Results</h6>
 					<div id="output"></div>
 			</div>
+			<h2 class="centered-text">JEREMY MILLER AND ELLA WYNN</h2>
+			<h1> <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"> Hello <img src="img/adele.jpg"></h1> 
+
 		</section>
 		<nav id="links">
 			<!-- Put links to other pages (including the homepage) here. -->
