--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
             <h1>JJ's Homepage</h1>
             <div class="minor-section">
                 <!-- Note that all filenames use lowercase and no spaces -->
-                <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
-                <h2>About Me</h2>
-                <p>My name is JJ. Welcome to my website :D</p>
+                <h2>Welcome to my page</h2>
+                <p>My name is JJ. Play some games</p>
 
 				<section id="gameSection">
 					<h2>Play Snake Game</h2>
