--- a/index.html
+++ b/index.html
@@ -4,62 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/site.css">
     <link rel="stylesheet" type="text/css" href="css/homepage.css">
     <style>
-        #gameSection {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .game-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .gameCanvas {
-            border: 2px solid #333;
-            margin-top: 10px;
-        }
-        .scoreBoard {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-        .button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin: 10px;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        .menuScreen, .endScreen {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            background-color: rgba(255, 255, 255, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .gameContainer {
-            position: relative;
-            margin-bottom: 20px;
-        }
-        #snakeContainer {
-            width: 400px;
-            height: 400px;
-        }
-        #tetrisContainer {
-            width: 300px;
-            height: 600px;
-        }
+        
     </style>
 </head>
 <body>
@@ -68,7 +13,7 @@
             <h1>JJ's Homepage</h1>
             <div class="minor-section">
                 <h2>Welcome to my page</h2>
-                <p>My name is JJ. Play some games</p>
+                <p>My name is JJ. I like viedo games, so I added tetris and snake. Have fun!</p>
 
                 <section id="gameSection">
                     <div class="game-container">
