--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="content">
         <section>
             <h1>JJ's Homepage</h1>
-            <img id="selfie"src="img/image.jpg">
+            <img class="selfie" src="img/image.jpg">
             <div class="minor-section">
                 <h2>Welcome to my page</h2>
                 <p>My name is JJ. I like video games, so I added Tetris and Snake. Have fun!</p>
@@ -65,7 +65,6 @@
             <!-- Put links to labs here. -->
         </nav>
     </main>
-
     <script src="snake.js"></script>
     <script src="tetris.js"></script>
 </body>
