--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!-- Put links to labs here. -->
         </nav>
     </main>
-    <script src="snake.js"></script>
-    <script src="tetris.js"></script>
+    <script src="js/snake.js"></script>
+    <script src="js/tetris.js"></script>
 </body>
 </html>
